# PortfolioBuilderAPI

./: .gcloudignore  .gitignore  README.md  app.yaml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: appengine.yml  black.yml  python-app.yml
src/: main.py
src/api/: api.py
src/api/endpoints/: backtest.py  factor.py  funds.py  optimisation.py
src/data/: ff_daily.parquet  ff_monthly.parquet  fund_codes.parquet  fund_prices.parquet  sp500.csv
src/modules/: data_loader.py  expiry_dict.py  factor_analysis.py  metrics.py  optimisation.py  portfolio.py
src/schemas/: __init__.py  backtest.py  factor.py  optimisation.py
src/tests/: test_backtest.py  test_factor.py  test_factorRegression.py  test_facttor.py  test_frontier.py  test_funds.py
