[tool.poetry]
name = "portfoliobuilder"
version = "0.1.0"
description = ""
authors = ["yeungadrian"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.3"
pydantic = "^1.9.1"
tqdm = "^4.64.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pyarrow = "^10.0.1"
statsmodels = "^0.13.5"
fsspec = "^2022.11.0"
httpx = "^0.23.1"


[tool.poetry.dev-dependencies]
black = "^22.8.0"
notebook = "^6.4.12"
pre-commit = "^2.17.0"
pytest = "^6.2.5"




[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
